# mental-models-ai-skills

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  categories.json  pyproject.toml  skills-index.json
adapters/claude/: README.md
adapters/codex/: README.md
adapters/gemini/: README.md
docs/: INTEGRATION_GUIDE.md  PRODUCTION_READINESS.md
examples/: usage-prompts.md
schemas/: skill-manifest.schema.json  skill-run.schema.json
scripts/: install_all.sh  install_claude.sh  install_codex.sh  install_gemini.sh  install_windows.ps1  validate.sh
skillpack/: __main__.py
skills/business/business-health-diagnostic/: README.md  SKILL.md  examples.md  sample-input.json  skill.json
skills/communication/human-message-rewriter/: README.md  SKILL.md  examples.md  sample-input.json  skill.json
skills/content/shareability-scorer/: README.md  SKILL.md  examples.md  sample-input.json  skill.json
skills/finance/asset-expense-coach/: README.md  SKILL.md  examples.md  sample-input.json  skill.json
skills/finance/money-behavior-coach/: README.md  SKILL.md  examples.md  sample-input.json  skill.json
skills/growth/feedback-reframer/: README.md  SKILL.md  examples.md  sample-input.json  skill.json
skills/growth/long-term-goal-coach/: README.md  SKILL.md  examples.md  sample-input.json  skill.json
skills/growth/resistance-breaker/: README.md  SKILL.md  examples.md  sample-input.json  skill.json
skills/marketing/message-stickiness-enhancer/: README.md  SKILL.md  examples.md  sample-input.json  skill.json
tests/: test_repository.py
(+105 files in other folders)
